Inventing the playground.

--- a/references.html
+++ b/references.html
@@ -34,9 +34,9 @@
 		<meta property="og:title"         content="Q ⟩ References">
 		<meta property="og:description"   content="Quantum computing in your browser.">
 		<meta property="og:image"         content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
-		<meta property="og:url"           content="https://stewdio.github.io/q.js/References.html">
+		<meta property="og:url"           content="https://stewdio.github.io/q.js/references.html">
 		
-		<link rel="canonical"             href="https://stewdio.github.io/q.js/References.html">
+		<link rel="canonical"             href="https://stewdio.github.io/q.js/references.html">
 		<link rel="icon" type="image/png" href="Assets/q-favicon-064.png">
 		<link rel="apple-touch-icon"      href="Assets/q-favicon-144.png">
 		<link rel="stylesheet" type="text/css" href="Assets/style.css">
