--- a/playground.html
+++ b/playground.html
@@ -51,135 +51,135 @@
 		<script src="Q/Gate.js"></script>
 		<script src="Q/Circuit.js"></script>
 		<script src="Assets/navigation.js"></script>
+
+
+		<script src="Q/Circuit-GUI.js"></script>
 	</head>
 	<body>
 		<main>
 
 
 
-<style>
-
-.qjs-circuit svg {
-
-	width:  60px;
-	height: 60px;
-	fill: #DDD;
-}
-.qjs-gate {
-
-	margin: 10px;
-	width:  40px;
-	height: 40px;
-	cursor: move;
-	fill: var( --color-green );
-}
-.qjs-gate-label {
-
-	fill: var( --color-white );
-}
-#qjs-gate-control,
-#qjs-gate-controlled {
-
-	fill: var( --color-blue );
-}
-#qjs-gate-hadamard {
-
-	fill: var( --color-red );	
-}
-
-</style>
+			<p>
+				Just a little testing ground for circuits.
+				Just a little testing ground for circuits.
+				Just a little testing ground for circuits.
+				Just a little testing ground for circuits.
+				Just a little testing ground for circuits.
+			</p>
+			<br><br>
 
 
-			<div class="qjs-circuit">
-				<svg><use xlink:href="#qjs-wire"/></svg>
-				<svg class="qjs-gate"><use xlink:href="#qjs-gate-hadamard"/></svg>
-				<svg class="qjs-gate"><use xlink:href="#qjs-gate-pauli-x"/></svg>
-				<svg class="qjs-gate"><use xlink:href="#qjs-gate-pauli-y"/></svg>
-				<svg class="qjs-gate"><use xlink:href="#qjs-gate-pauli-z"/></svg>
-
-				<svg class="qjs-gate"><use xlink:href="#qjs-gate-phase"/></svg>
-				<svg class="qjs-gate"><use xlink:href="#qjs-gate-t"/></svg>
-				<svg class="qjs-gate"><use xlink:href="#qjs-gate-pi"/></svg>
-				
-				<svg class="qjs-gate"><use xlink:href="#qjs-gate-controlled"/></svg>
-
-
-			</div>
-
-
-
+<!--
 
 <h4>Circuit</h4>
 New<br>
 Save<br>
-Re-dimension<br>
-<br>
+Re-dimension (Add/remove qubit, add/remove moment)<br>
+
 <h4>Edit</h4>
 Cut<br>
 Copy<br>
 Paste<br>
 Insert<br>
+Undo<br>
 
-<h4>[Clipboard]</h4>
+<h4>[View clipboard]</h4>
 
-
-
-
-
-
-
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
-	
-
-
-	<g id="_x30_" class="st0">
-		<g class="st1">
-			<path d="M24.4,21.6c-0.1,0.7-0.3,1.4-0.5,2.1s-0.6,1.3-1,1.8s-1,0.9-1.6,1.2s-1.3,0.5-2.2,0.4c-0.8,0-1.4-0.2-2-0.5
-				s-0.9-0.8-1.2-1.3s-0.5-1.1-0.5-1.8s-0.1-1.3,0-2l0.5-3.4c0.1-0.7,0.3-1.4,0.5-2.1s0.6-1.3,1-1.8s1-0.9,1.6-1.2s1.3-0.5,2.2-0.4
-				c0.5,0,1,0.1,1.4,0.3s0.7,0.4,1,0.6s0.5,0.6,0.7,0.9s0.3,0.7,0.4,1.1s0.2,0.8,0.2,1.3s0,0.9-0.1,1.4L24.4,21.6z M22.1,19.5
-				L18,22.3c0,0.3,0,0.6,0,0.9s0,0.6,0.1,0.9s0.2,0.5,0.4,0.7S19,25,19.3,25c0.4,0,0.8-0.1,1-0.3s0.5-0.4,0.7-0.7s0.3-0.6,0.4-1
-				s0.2-0.7,0.2-1L22.1,19.5z M18.3,20.3l4.1-2.8c0-0.3,0.1-0.6,0.1-0.9s0-0.6-0.1-0.9s-0.2-0.5-0.4-0.7s-0.5-0.3-0.8-0.3
-				c-0.4,0-0.8,0.1-1,0.2s-0.5,0.4-0.7,0.7s-0.3,0.6-0.4,1s-0.2,0.7-0.2,1L18.3,20.3z"/>
-		</g>
-		<polygon class="st1" points="29.9,30.5 28.1,29.5 33.9,19.9 30.1,10.4 31.9,9.6 36.1,20.1 	"/>
-	</g>
-	<g id="_x31_" class="st0">
-		<g class="st1">
-			<path d="M20.9,27h-2.7l1.9-10.8l-3.7,1.3l0.4-2.5l6.3-2.2h0.2L20.9,27z"/>
-		</g>
-		<polygon class="st1" points="29.9,30.5 28.1,29.5 33.9,19.9 30.1,10.4 31.9,9.6 36.1,20.1 	"/>
-	</g>
-	
+-->
 
 
 
-	<g id="qjs-wire">
+
+			<div class="qjs-circuit">
+				<div class="qjs-circuit-background-layer">
+					<div class="qjs-circuit-wire" style="grid-row: 2; "><svg><use xlink:href="#qjs-circuit-wire"/></svg></div>
+					<div class="qjs-circuit-wire" style="grid-row: 3; "><svg><use xlink:href="#qjs-circuit-wire"/></svg></div>
+				</div>
+				<div class="qjs-circuit-connections-layer">
+					<!-- controlled connections! -->
+				</div>
+				<div class="qjs-circuit-grabables-layer">
+					
+					<!-- <div style="grid-row: 1; grid-column: 1;">MENU</div> -->
+
+					<div style="grid-column: 2;" class="qjs-circuit-moment">t<code><strong>0</strong></code></div>
+					<div style="grid-column: 3;" class="qjs-circuit-moment">t<code><strong>1</strong></code></div>
+					<div style="grid-column: 4;" class="qjs-circuit-moment">t<code><strong>2</strong></code></div>
+					<div style="grid-column: 5;" class="qjs-circuit-moment">t<code><strong>3</strong></code></div>
+
+					<div style="grid-row: 2;" class="qjs-circuit-qubit">q<code><strong>0</strong></code></div>
+					<div style="grid-row: 2;" class="qjs-circuit-input">0⟩</div>
+					<div style="grid-row: 2; grid-column: 3;"><svg class="qjs-circuit-gate"><use xlink:href="#qjs-circuit-gate-hadamard"/></svg></div>
+					<div style="grid-row: 2; grid-column: 4;"><svg class="qjs-circuit-gate"><use xlink:href="#qjs-circuit-gate-control"/></svg></div>
+					<div style="grid-row: 2; grid-column: 5;"><svg class="qjs-circuit-gate"><use xlink:href="#qjs-circuit-gate-pauli-x"/></svg></div>
+
+					<div style="grid-row: 3;" class="qjs-circuit-qubit">q<code><strong>1</strong></code></div>
+					<div style="grid-row: 3;" class="qjs-circuit-input">0⟩</div>
+					<div style="grid-row: 3; grid-column: 3;"><svg class="qjs-circuit-gate"><use xlink:href="#qjs-circuit-gate-identity"/></svg></div>
+					<div style="grid-row: 3; grid-column: 4;"><svg class="qjs-circuit-gate"><use xlink:href="#qjs-circuit-gate-controlled"/></svg></div>
+					<div style="grid-row: 3; grid-column: 5;"><svg class="qjs-circuit-gate"><use xlink:href="#qjs-circuit-gate-pauli-x"/></svg></div>
+
+				</div>
+			</div>
+			
+
+
+
+
+
+
+			<br><br><br><br><br>
+			<br><br><br><br><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<svg style="display:none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+	<g id="qjs-circuit-wire">
 		<rect y="30" width="60" height="1"/>
 	</g>
-	
+</svg>
 
-
-	<g class="gate" id="qjs-gate-identity">
+<svg style="display:none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;" xml:space="preserve">
+	<g id="qjs-circuit-qubit-0">
+		<path d="M24.4,21.6c-0.1,0.7-0.3,1.4-0.5,2.1s-0.6,1.3-1,1.8s-1,0.9-1.6,1.2s-1.3,0.5-2.2,0.4c-0.8,0-1.4-0.2-2-0.5
+			s-0.9-0.8-1.2-1.3s-0.5-1.1-0.5-1.8s-0.1-1.3,0-2l0.5-3.4c0.1-0.7,0.3-1.4,0.5-2.1s0.6-1.3,1-1.8s1-0.9,1.6-1.2s1.3-0.5,2.2-0.4
+			c0.5,0,1,0.1,1.4,0.3s0.7,0.4,1,0.6s0.5,0.6,0.7,0.9s0.3,0.7,0.4,1.1s0.2,0.8,0.2,1.3s0,0.9-0.1,1.4L24.4,21.6z M22.1,19.5
+			L18,22.3c0,0.3,0,0.6,0,0.9s0,0.6,0.1,0.9s0.2,0.5,0.4,0.7S19,25,19.3,25c0.4,0,0.8-0.1,1-0.3s0.5-0.4,0.7-0.7s0.3-0.6,0.4-1
+			s0.2-0.7,0.2-1L22.1,19.5z M18.3,20.3l4.1-2.8c0-0.3,0.1-0.6,0.1-0.9s0-0.6-0.1-0.9s-0.2-0.5-0.4-0.7s-0.5-0.3-0.8-0.3
+			c-0.4,0-0.8,0.1-1,0.2s-0.5,0.4-0.7,0.7s-0.3,0.6-0.4,1s-0.2,0.7-0.2,1L18.3,20.3z"/>
+		<polygon points="29.9,30.5 28.1,29.5 33.9,19.9 30.1,10.4 31.9,9.6 36.1,20.1"/>
+	</g>
+	<g id="qjs-circuit-qubit-1" class="st0">
+		<path d="M20.9,27h-2.7l1.9-10.8l-3.7,1.3l0.4-2.5l6.3-2.2h0.2L20.9,27z"/>
+		<polygon points="29.9,30.5 28.1,29.5 33.9,19.9 30.1,10.4 31.9,9.6 36.1,20.1"/>
+	</g>
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-identity">
 		<circle cx="20" cy="20" r="5"/>
 	</g>
 	
-
-
-
-	<g class="qjs-gate" id="qjs-gate-controlled">
-		<circle cx="20" cy="20" r="15"/>
-		<polygon class="qjs-gate-label" points="27,19 21,19 21,13 19,13 19,19 13,19 13,21 19,21 19,27 21,27 21,21 27,21 	"/>
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-control">
+		<circle cx="20" cy="20" r="10"/>
 	</g>
-	
-
-
-
-
-
-	<g class="qjs-gate" id="qjs-gate-unknown">
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-controlled">
+		<circle cx="20" cy="20" r="15"/>
+		<polygon class="qjs-circuit-gate-label" points="27,19 21,19 21,13 19,13 19,19 13,19 13,21 19,21 19,27 21,27 21,21 27,21 	"/>
+	</g>
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-unknown">
 		<rect width="40" height="40"/>
-		<g class="qjs-gate-label">
+		<g class="qjs-circuit-gate-label">
 			<path d="M18.1,22.5c0.1-1.5,0.6-2.7,1.5-3.5l0.8-0.6c0.4-0.4,0.8-0.7,1-1.1s0.3-0.8,0.3-1.3c0-0.6-0.3-0.9-0.9-0.9
 				c-0.4,0-0.7,0.1-1,0.4s-0.4,0.7-0.5,1.2l-3.2,0c0.1-1.3,0.6-2.3,1.5-3.1s2-1.1,3.4-1.1c0.8,0,1.6,0.2,2.2,0.5s1.1,0.8,1.4,1.3
 				s0.4,1.2,0.4,2c-0.1,1.1-0.7,2.1-1.9,3.1l-1.1,0.9c-0.7,0.6-1.1,1.3-1.2,2.1L18.1,22.5z M17.1,25.5c0-0.5,0.2-0.9,0.5-1.2
@@ -187,26 +187,22 @@ Insert<br>
 				S17.1,26,17.1,25.5z"/>
 		</g>
 	</g>
-	<g class="qjs-gate" id="qjs-gate-pi">
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-pi">
 		<rect width="40" height="40"/>
-		<g class="qjs-gate-label">
+		<g class="qjs-circuit-gate-label">
 			<path d="M26.4,18.8h-1.7l-0.8,4.7l0,0.4c0,0.4,0.3,0.6,0.8,0.6c0.1,0,0.4,0,0.8,0l-0.2,2.4c-0.6,0.2-1.1,0.3-1.7,0.3
 				c-1,0-1.7-0.3-2.2-0.9s-0.7-1.3-0.6-2.3l0.8-5.1h-2L17.9,27h-3.2l1.4-8.2h-1.7l0.4-2.4h11.9L26.4,18.8z"/>
 		</g>
 	</g>
-	<g class="qjs-gate" id="qjs-gate-t">
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-t">
 		<rect width="40" height="40"/>
-		<g class="qjs-gate-label">
+		<g class="qjs-circuit-gate-label">
 			<path d="M27,15.4h-4.1l-2,11.6h-3.3l2-11.6h-4.1l0.5-2.6h11.5L27,15.4z"/>
 		</g>
 	</g>
-	
-
-
-
-	<g class="qjs-gate" id="qjs-gate-phase">
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-phase">
 		<rect width="40" height="40"/>
-		<g class="qjs-gate-label">
+		<g class="qjs-circuit-gate-label">
 			<path class="st3" d="M21.7,23.2c0.1-0.7-0.3-1.3-1.2-1.7l-1.6-0.7c-2.2-1-3.3-2.4-3.2-4.1c0-0.8,0.3-1.5,0.8-2.1s1.2-1.1,2.1-1.5
 				s1.9-0.5,2.9-0.5c1.4,0,2.5,0.4,3.4,1.2s1.3,1.9,1.3,3.2h-3.3c0-0.5-0.1-1-0.3-1.3s-0.7-0.5-1.2-0.5c-0.6,0-1.1,0.1-1.5,0.4
 				s-0.7,0.6-0.8,1.1c-0.1,0.7,0.4,1.2,1.5,1.6s1.9,0.8,2.4,1.1c1.6,0.9,2.3,2.2,2.2,3.8c-0.1,0.8-0.3,1.5-0.8,2.2s-1.1,1.1-2,1.4
@@ -214,28 +210,27 @@ Insert<br>
 				c0.6,0,1-0.1,1.4-0.4S21.6,23.6,21.7,23.2z"/>
 		</g>
 	</g>
-	
-	<g class="qjs-gate" id="qjs-gate-pauli-z">
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-pauli-z">
 		<rect width="40" height="40"/>
-		<g class="qjs-gate-label">
+		<g class="qjs-circuit-gate-label">
 			<path d="M18.3,24.3l6.6,0L24.4,27H13.6l0.3-2l8.2-9.6l-6.6,0l0.5-2.6h10.7l-0.3,1.9L18.3,24.3z"/>
 		</g>
 	</g>
-	<g class="qjs-gate" id="qjs-gate-pauli-y">
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-pauli-y">
 		<rect width="40" height="40"/>
-		<g class="qjs-gate-label">
+		<g class="qjs-circuit-gate-label">
 			<path class="st3" d="M20.3,18.9l3.6-6.2h3.8L21.5,22l-0.8,5h-3.4l0.9-5.3l-2.8-8.9l3.5,0L20.3,18.9z"/>
 		</g>
 	</g>
-	<g class="qjs-gate" id="qjs-gate-pauli-x">
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-pauli-x">
 		<rect width="40" height="40"/>
-		<g class="qjs-gate-label">
+		<g class="qjs-circuit-gate-label">
 			<path class="st3" d="M20.4,17.5l3-4.7h4L22.3,20l2.8,7h-3.7l-1.6-4.8L16.8,27h-4l5.2-7.3l-2.7-6.9h3.7L20.4,17.5z"/>
 		</g>
 	</g>
-	<g class="qjs-gate" id="qjs-gate-hadamard">
+	<g class="qjs-circuit-gate" id="qjs-circuit-gate-hadamard">
 		<rect width="40" height="40"/>
-		<g class="qjs-gate-label">
+		<g class="qjs-circuit-gate-label">
 			<path class="st3" d="M24.7,27h-3.3l1-5.9h-4.9l-1,5.9h-3.3l2.5-14.2H19l-1,5.6h4.9l1-5.6h3.3L24.7,27z"/>
 		</g>
 	</g>
