--- a/playground.html
+++ b/playground.html
@@ -59,12 +59,14 @@
 		<main>
 
 
-			<h3>Just sketching here</h3>
+			<h3>Just sketching</h3>
 			<p>
-				This is just a nook
-				where I’m sketching some things out. 
-				Right now I’m focussed on circuits rendered a
-				Document Object Models.
+				This page is just a nook
+				where I’m sketching some bits out. 
+				Some things are functional.
+				Some less so.
+				Right now I’m focussed on circuits rendered as
+				document fragments (aka bits of a webpage).
 				They aren’t interactive ... yet!
 			</p>
 
@@ -73,11 +75,13 @@
 			<p>
 				This is a regular old Bell state, but with X operations as a finale.
 				That’s kind of fun because the two possible results are 
-				|00⟩ and |11⟩.
+				<span class="complex-vector ket">00</span>
+				and
+				<span class="complex-vector ket">11</span>.
 				So it’s all zeros or all ones.
 				All or nothing.
 			</p>
-			<h5>DOM</h5>
+			<h5>Document fragment</h5>
 			<div id="bell-plus-dom"></div>
 			<h5>ASCII diagram</h5>
 			<pre><code id="bell-plus-diagram"></code></pre>
@@ -97,7 +101,7 @@
 				and there’s an attempt to center the text labels within their boxes.
 				Also note how the overlapping connectors are dealt with, eh?
 			</p>
-			<h5>DOM</h5>
+			<h5>Document fragment</h5>
 			<div id="whiplash-dom"></div>
 			<h5>ASCII diagram</h5>
 			<pre><code id="whiplash-diagram"></code></pre>
