--- a/playground.html
+++ b/playground.html
@@ -82,7 +82,9 @@
 				All or nothing.
 			</p>
 			<h5>Document fragment</h5>
+			<div id="qjs-circuit-menu"></div>
 			<div id="bell-plus-dom"></div>
+			<div id="bell-plus-report-live" for="bell-plus-dom"></div>
 			<h5>ASCII diagram</h5>
 			<pre><code id="bell-plus-diagram"></code></pre>
 			<h5>Text</h5>
@@ -271,6 +273,7 @@ var bellPlus = Q`
 	I C1 X
 `
 bellPlus.sort$()
+document.getElementById( 'qjs-circuit-menu' ).appendChild( Q.Circuit.createDomMenu() )
 document.getElementById( 'bell-plus-dom' ).appendChild( bellPlus.toDom() )
 document.getElementById( 'bell-plus-diagram' ).innerText = bellPlus.toDiagram()
 document.getElementById( 'bell-plus-text' ).innerText = bellPlus.toText()
