Updates to Circuit drag-and-drop.

--- a/playground.html
+++ b/playground.html
@@ -82,6 +82,14 @@
 				All or nothing.
 			</p>
 			<h5>Document fragment</h5>
+			<p>
+				Drag and drop an operation from here on to the circuit.
+				You can also drag operations within the circuit to copy 
+				them, though this won’t work for multi-register operations—yet!
+				More is coming :)
+				Note how changing the circuit changes the probabilities report,
+				as well as the ASCII diagram and text representation of the circuit.
+			</p>
 			<div id="qjs-circuit-menu"></div>
 			<div id="bell-plus-dom"></div>
 			<pre><code id="bell-plus-report"></code></pre>
